k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vermeg-assurance
  labels:
    name: vermeg-assurance
    environment: production
