k8s/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: vermeg-assurance
  labels:
    app: keycloak
spec:
  ports:
  - port: 8080
    name: keycloak
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: vermeg-assurance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.1.5
        args: ["start-dev"]
        ports:
        - containerPort: 8080
          name: keycloak
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
      volumes:
      - name: keycloak-data
        emptyDir: {}
